# SVG-Group-Project

csc231-graphics-project/: BackEndDevGuide.md  BackEndNotes.md  BackEndUserGuide.md  CMakeLists.txt  FrontEndNotes.md  FrontendDeveloperGuide.md  FrontendUserGuide.md  canvas.cpp  canvas.h  circle.cpp  circle.h  line.cpp  line.h  main.cpp  mockcanvas.cpp  mockcanvas.h  position.cpp  position.h  quadrangle.cpp  quadrangle.h  shape.cpp  shape.h  style.h  svg.cpp  svg.h  testdraw.cpp  triangle.cpp  triangle.h
